tests/ui/cfg/cfg_attr-resolve.stderr
error[E0599]: no method named `project` found for type `std::pin::Pin<&mut Foo<u8>>` in the current scope
  --> $DIR/cfg_attr-resolve.rs:10:31
   |
10 |     let _x = Pin::new(&mut x).project();
   |                               ^^^^^^^ method not found in `std::pin::Pin<&mut Foo<u8>>`
